[package]
name = "nrt"
version = "0.1.0"
edition = "2021"
authors = ["Aditya K"]
description = "nrt is a Rust-based command-line tool that replicates and extends the functionality of the Unix cat command."
readme = "README.md"
license = "GPL-3.0"
repository = "https://github.com/adityakaklij/nrt"

[dependencies]
colored = "2.0.0"
chrono = "0.4"
arboard = "2.0"